listing-12-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: echo
              servicePort: 80
